# RBE500-FinalProject

./: Doxyfile  README.md  TODO.txt
code/dynamixel_sdk_examples/: CMakeLists.txt
code/dynamixel_sdk_examples/include/: current_and_position_read_write_node_wokr.hpp
code/dynamixel_sdk_examples/src/: current_read_write_node.cpp  read_write_node.cpp
code/rbe500_final_project/: CMakeLists.txt  LICENSE  package.xml
code/rbe500_final_project/include/rbe500_final_project/: helpers.hpp  manipulator_core.hpp  manipulator_fk_ros.hpp  manipulator_follow_actions.hpp  manipulator_ik_ros.hpp  manipulator_jp_updater_ros.hpp  manipulator_move_ee.hpp  manipulator_pd.hpp  manipulator_pd_ros.hpp  manipulator_ros.hpp  manipulator_vlk_ros.hpp
code/rbe500_final_project/launch/: manipulator.launch.py  manipulator_fk_ros.launch.py  manipulator_ik_ros.launch.py  manipulator_jp_updater_ros.launch.py  manipulator_move_ee.launch.py  manipulator_pd_ros.launch.py  manipulator_ros.launch.py  manipulator_vlk_ros.launch.py
code/rbe500_final_project/params/: manipulator_actions.yaml  manipulator_core_pramas.yaml  manipulator_pd.yaml  manipulator_vlk_params.yaml
code/rbe500_final_project/src/: manipulator_core.cpp  manipulator_fk_node.cpp  manipulator_fk_ros.cpp  manipulator_follow_actions.cpp  manipulator_follow_actions_node.cpp  manipulator_ik_node.cpp  manipulator_ik_ros.cpp  manipulator_jp_updater_node.cpp  manipulator_jp_updater_ros.cpp  manipulator_move_ee.cpp  manipulator_move_ee_node.cpp  manipulator_node.cpp  manipulator_pd.cpp  manipulator_pd_ros.cpp  manipulator_pd_ros_node.cpp  manipulator_ros.cpp  manipulator_vlk_node.cpp  manipulator_vlk_ros.cpp
code/rbe500_final_project/test/: basic_eigen_test.cpp  main.cpp  mainpulator_pd_test.cpp  manipulator_core_test.cpp  simple_test.cpp
code/rbe500_final_project_msgs/: CMakeLists.txt  package.xml
code/rbe500_final_project_msgs/msg/: JointVelocity.msg
code/rbe500_final_project_msgs/srv/: GetEndEffectorTwist.srv  GetJointAngles.srv  GetJointVelocities.srv
docs/html/: README_8md.html  annotated.html  annotated_dup.js  basic__eigen__test_8cpp.html  basic__eigen__test_8cpp.js  basic__eigen__test_8cpp__incl.map  basic__eigen__test_8cpp__incl.md5  basic__eigen__test_8cpp_a9650d9627b059427b978ed702ac9036c_cgraph.map  basic__eigen__test_8cpp_a9650d9627b059427b978ed702ac9036c_cgraph.md5  classManipulatorFollowActions-members.html  classManipulatorFollowActions.html  classManipulatorFollowActions.js  classManipulatorFollowActions__inherit__graph.map  classManipulatorFollowActions__inherit__graph.md5  classManipulatorFollowActions_a2ba023736597295c2edb3657c2bef480_cgraph.map  classManipulatorFollowActions_a2ba023736597295c2edb3657c2bef480_cgraph.md5  classManipulatorFollowActions_a2ba023736597295c2edb3657c2bef480_icgraph.map  classManipulatorFollowActions_a2ba023736597295c2edb3657c2bef480_icgraph.md5  classManipulatorFollowActions_a2e530f8fe0d221a50a8a407b76ab7f83_cgraph.map  classManipulatorFollowActions_a2e530f8fe0d221a50a8a407b76ab7f83_cgraph.md5  classManipulatorFollowActions_a430e3adc39587d9499ae171c05ad9190_cgraph.map  classManipulatorFollowActions_a430e3adc39587d9499ae171c05ad9190_cgraph.md5  classManipulatorFollowActions_a430e3adc39587d9499ae171c05ad9190_icgraph.map  classManipulatorFollowActions_a430e3adc39587d9499ae171c05ad9190_icgraph.md5  classManipulatorFollowActions_a5e5733723d181363dea81c616f52acbd_cgraph.map  classManipulatorFollowActions_a5e5733723d181363dea81c616f52acbd_cgraph.md5  classManipulatorFollowActions_a67ebc3ebe875efc0daeee5ed41d9460d_cgraph.map  classManipulatorFollowActions_a67ebc3ebe875efc0daeee5ed41d9460d_cgraph.md5  classManipulatorFollowActions_a67ebc3ebe875efc0daeee5ed41d9460d_icgraph.map  classManipulatorFollowActions_a67ebc3ebe875efc0daeee5ed41d9460d_icgraph.md5  classManipulatorFollowActions_a9c2728f05ef5cd66f53315f09a65c452_icgraph.map  classManipulatorFollowActions_a9c2728f05ef5cd66f53315f09a65c452_icgraph.md5  classManipulatorFollowActions_ac5cd07b62a0f7fb2286d942531fe3a38_cgraph.map  classManipulatorFollowActions_ac5cd07b62a0f7fb2286d942531fe3a38_cgraph.md5  classManipulatorFollowActions_ac5cd07b62a0f7fb2286d942531fe3a38_icgraph.map  classManipulatorFollowActions_ac5cd07b62a0f7fb2286d942531fe3a38_icgraph.md5  classManipulatorFollowActions_af59c5fbff4a6d0ba228f32e297ae85b5_icgraph.map  classManipulatorFollowActions_af59c5fbff4a6d0ba228f32e297ae85b5_icgraph.md5  classManipulatorFollowActions_afa256b195d75a0e8f1e3adea527a2688_icgraph.map  classManipulatorFollowActions_afa256b195d75a0e8f1e3adea527a2688_icgraph.md5  (+297 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  (+25 more)
